# Practica3-IS

./: CMakeLists.txt  Miguelito  README.md  TestBaseDeDatos.cpp  app_prueba  app_tutorias  app_uco  asignar_tutor.cpp  edu_connect  ejecutar_tests  gestor  main.cc  menu  proyecto.cpp  proyecto.h  prueba  prueba.c  prueba.cpp  pruebafinal  pruebamiguel.cpp  pruebarafa  test_alertas.cpp  test_chat.cpp  tutores_alumnos.db  tutoria_app.db
pruebas/: Asignacion_prueba.cpp  Prueba.cpp  Pruebas-CU03.cpp  pruebas-CU07.cpp  test_actas  test_aislado  test_con_fallo  test_encuesta  test_final  test_manual  test_mio_solo
pruebas_miguel/: ejecutar_test_chat  ejecutar_tests
pruebas_rafa/: pruebarafa  run_tests  run_tests_2  test_menus.cpp  tutoria_app.db
